Rename Dolphin View's nameColumnRect member to visualRect.

This overrides QTreeView::visualRect, such that the "visual rect"
matches the area used in indexAt. Fixes the problem that the selection
loses items in the Details View when selecting new items with
Shift+Keyboard.

BUG: 217447

svn path=/trunk/KDE/kdebase/apps/; revision=1060716