src/dolphindetailsview.h
@@ -72,6 +72,7 @@ protected:
     virtual void currentChanged(const QModelIndex& current, const QModelIndex& previous);
     virtual bool eventFilter(QObject* watched, QEvent* event);
     virtual QModelIndex indexAt (const QPoint& point) const;
+    virtual QRect visualRect(const QModelIndex& index) const;
     virtual void setSelection(const QRect& rect, QItemSelectionModel::SelectionFlags command);
     virtual void scrollTo(const QModelIndex& index, ScrollHint hint = EnsureVisible);
 
@@ -205,8 +206,6 @@ private:
      * Resizes all columns in a way to use the whole available width of the view.
      */
     void resizeColumns();
-
-    QRect nameColumnRect(const QModelIndex& index) const;
 
     /**
      * Returns true, if \a pos is within the expanding toggle of a tree.
